# IJCNN-2026-Targeted-Bit-Width-Quantization-Conditioned-Backdoor

./: LICENSE  README.md  hydra_backdoor_w_lossfn.py  pyproject.toml  run_hydra_experiment.sh
configs/: config.yaml
configs/dataset/: cifar10.yaml  cifar100.yaml
configs/model/: mobilenetv2.yaml  resnet34.yaml  vgg16.yaml
networks/: mobilenet.py  resnet.py  vgg.py
run/4bits/: run.sh  run_hydra_mobilenetv2_cifar10.sh  run_hydra_mobilenetv2_cifar100.sh  run_hydra_resnet34_cifar10.sh  run_hydra_resnet34_cifar100.sh  run_hydra_vgg16_cifar10.sh  run_hydra_vgg16_cifar100.sh
run/8bits/: run.sh  run_hydra_mobilenetv2_cifar10.sh  run_hydra_mobilenetv2_cifar100.sh  run_hydra_resnet34_cifar10.sh  run_hydra_resnet34_cifar100.sh  run_hydra_vgg16_cifar10.sh  run_hydra_vgg16_cifar100.sh
utils/: Datasets.py  networks.py  optimizers.py  quantizer.py  wandb_logger.py
