[project]
name = "qu-anti-zation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "datasets>=4.4.1",
    "gdown>=5.2.0",
    "numpy>=2.3.3",
    "pillow>=11.3.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "hydra-core>=1.3.2",
    "wandb>=0.18.0",
    "scikit-learn",

]
